opam-version: "2.0"
maintainer: ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
authors: ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage: "https://github.com/samoht/sweet"
bug-reports: "https://github.com/samoht/sweet/issues"
license: "ISC"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"   {>= "5.00.0"}
  "dune"    {>= "3.8.0"}
  "yojson"
  "ppx_deriving_yojson"
  "digestif"
  "decompress"
  "base64"
  "cmdliner"
  "logs"
  "astring"
  "dune-build-info"
  "mirage-crypto-rng-eio"
  "cohttp"
  "cohttp-eio"
  "progress"
  "tls-eio"
  "eio" {>= "0.13"}
  "tar-eio"
  "eio_main"
  "xdg"
  "printbox"
  "printbox-text"
  "bos"
  "alcotest" {with-test}
]

synopsis: "Tools to manage OCI and Docker images"
